--- a/consumiIdrici/mainwindow.ui
+++ b/consumiIdrici/mainwindow.ui
@@ -527,9 +527,9 @@
        <property name="geometry">
         <rect>
          <x>20</x>
-         <y>30</y>
+         <y>60</y>
          <width>361</width>
-         <height>441</height>
+         <height>411</height>
         </rect>
        </property>
        <property name="selectionMode">
@@ -555,17 +555,55 @@
         <string>0</string>
        </property>
       </widget>
-      <zorder>label_16</zorder>
-      <zorder>monthlyAvg</zorder>
-      <zorder>dailyAvg</zorder>
-      <zorder>avgTable</zorder>
-      <zorder>weeklyAvg</zorder>
-      <zorder>monthlyAvg</zorder>
-      <zorder>label_16</zorder>
-      <zorder>dailyAvg</zorder>
-      <zorder>avgTable</zorder>
-      <zorder>weeklyAvg</zorder>
-      <zorder>groupBox_4</zorder>
+      <widget class="QDateEdit" name="devUsers_startDate">
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>30</y>
+         <width>110</width>
+         <height>22</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_15">
+       <property name="geometry">
+        <rect>
+         <x>230</x>
+         <y>30</y>
+         <width>41</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>-</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+      <widget class="QDateEdit" name="devUsers_endDate">
+       <property name="geometry">
+        <rect>
+         <x>271</x>
+         <y>30</y>
+         <width>110</width>
+         <height>22</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_17">
+       <property name="geometry">
+        <rect>
+         <x>25</x>
+         <y>30</y>
+         <width>91</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Periodo:</string>
+       </property>
+      </widget>
      </widget>
      <widget class="QGroupBox" name="groupBox_4">
       <property name="geometry">
