Minor problems solved Project document
git-svn-id: file:///J/repository/fondamenti1_consumiIdrici@59 05fd7df9-1aff-c842-a7be-554b73f46853

--- a/consumiIdrici/mainwindow.ui
+++ b/consumiIdrici/mainwindow.ui
@@ -107,7 +107,7 @@
         </rect>
        </property>
        <property name="text">
-        <string>gg:mm:yyyy hh:ss )</string>
+        <string> </string>
        </property>
       </widget>
       <widget class="QComboBox" name="histogramModeCombo">
